# barnes-hut

./: .gitignore  CMakeLists.txt  README.md
src/: body.hpp  config.h  initial_conditions.cpp  initial_conditions.hpp  main.cpp  octree_node.cpp  octree_node.hpp  region.hpp  simulation.cpp  simulation.hpp  vec3.cpp  vec3.hpp
unit_test/: test_barnes_hut.cpp  test_naive.cpp
unit_test/results/: barnes-hut.csv  naive.csv
visualisation/: requirements.txt  visualize.ipynb
visualisation/utils/: csv_util.py  visualize_pcd.py
